--- a/bs_blog_s/about.html
+++ b/bs_blog_s/about.html
@@ -6,24 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="bs_blog_s/lib/bootstrap/css/bootstrap.css">
-    <link rel="stylesheet" href="bs_blog_s/css/main.css">
-    <link rel="stylesheet" href="bs_blog_s/css/animate.css">
-    <link rel="stylesheet" href="bs_blog_s/css/font-icon.css">
-    <title>文章内容</title>
+    <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/animate.css">
+    <link rel="stylesheet" href="css/font-icon.css">
+    <title>关于我</title>
 </head>
 <body>
 <!--导航-->
 <nav class="navbar navbar-expand-lg navbar-light nav-color-nav  navbar-lk text-dark">
     <div class="container">
-        <a class="navbar-brand xiyuan" href="#"><img src="bs_blog_s/images/logo2.png" alt=""></a>
+        <a class="navbar-brand xiyuan" href="#"><img src="images/logo2.png" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nabmune" aria-controls="nabmune" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="nabmune">
             <ul class="navbar-nav nav-color ">
                 <li class="nav-item active ">
-                    <a class="nav-link" href="index.html">首页 <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="../index.html">首页 <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item ">
                     <a class="nav-link" href="chat.html">说说</a>
@@ -69,50 +69,30 @@
         <div class="col-md-8">
             <div class="container">
 
-
                 <div class="row mt-2">
                     <div class="col-md-12 bgc">
                         <div class="new">
-                            <span>最新文章</span>
-                            <small>New Article</small>
+                            <span><i class="el el-info-circle"></i>关于本博客</span>
+                        </div>
+                    </div>
+                    <div class="col-md-12">
+                        <div class="about">
+                            <p>1.0版全新上线，付出总会有收获......</p>
                         </div>
                     </div>
                 </div>
-
                 <div class="row mt-2">
                     <div class="col-md-12 bgc">
-                        <div class="article-title">
-                            <!--<span>最新文章</span>
-                            <small>New Article</small>-->
-                            <ul>
-                                <li><a title="惜缘2019-04-03发表"><i class="el-time"></i>2019-04-03</a></li>
-                                <li class="d-none d-sm-none d-md-none d-lg-block"><a href="/index/about/index.html" title="作者： 惜缘"><i class="el-user"></i>惜缘</a></li>
-                                <li><a title="已有 2 个赞"><i class="el-heart"></i>2</a></li>
-                                <li><a title="已有 1次浏览"><i class="el-eye-open"></i>1</a></li>
-
-                            </ul>
+                        <div class="new">
+                            <span><i class="el el-list-alt"></i>内心独白</span>
                         </div>
+                    </div>
+                    <div class="about-content bgc">
+                        <p>个人简介：精通PHP技术开发，目前擅长ECOS、thinkPHP、Laravel、VMC等框架的开发，熟练Mootools、jQuery、Bootstrap、AJAX、javascript、Zepto、Html、CSS等前端页面技术和SEO网站优化技术，掌握Unix、Lunix等系统基本命令操作。.</p>
                     </div>
                 </div>
 
-                <div class="row mt-2 bgc">
 
-                        <div class="article-body">
-                            <p>js前端实现模糊查询</p><p>对于模糊查询，一般都是传关键字给后端，由后端来做。但是有时候一些轻量级的列表前端来做可以减少ajax请求，在一定程度上提高用户体验。废话不多说，直接上代码。</p>
-                            <p><br></p><p>//字符串方法indexOf</p><p>var len = list.length;</p><p>var arr = [];</p><p>for(var i=0;i&lt;len;i++){</p><p>&nbsp; &nbsp; //如果字符串中不包含目标字符会返回-1</p>
-                            <p>&nbsp; &nbsp; if(list[i].indexOf(keyWord)&gt;=0){</p><p>&nbsp; &nbsp; &nbsp; &nbsp; arr.push(list[i]);</p><p>&nbsp; &nbsp; }</p><p>}</p><p>return arr;</p><p><br></p><p>//正则表达式</p>
-                            <p>var len = list.length;</p><p>var arr = [];</p><p>var reg = new RegExp(keyWord);</p><p>for(var i=0;i&lt;len;i++){</p><p>&nbsp; &nbsp; //如果字符串中不包含目标字符会返回-1</p>
-                            <p>&nbsp; &nbsp; if(list[i].match(reg)){</p><p>&nbsp; &nbsp; &nbsp; &nbsp; arr.push(list[i]);</p><p>&nbsp; &nbsp; }</p><p>}</p><p>return arr;</p><p><br></p>
-                        </div>
-
-
-
-
-
-
-
-
-                </div>
 
                 <div class="row mt-2">
                     <div class="col-md-12 bgc">
@@ -127,7 +107,7 @@
                             <div class="col-md-4 bgc mb-4 ">
                                 <div class="card mb-4 box-shadow  mt-4">
                                     <div class="showimg">
-                                        <img class="card-img-top"  style=" width: 100%; display: block;" src="bs_blog_s/images/7.jpg" data-holder-rendered="true">
+                                        <img class="card-img-top"  style=" width: 100%; display: block;" src="images/7.jpg" data-holder-rendered="true">
                                     </div>
 
                                     <div class="card-body">
@@ -144,7 +124,7 @@
                             <div class="col-md-4 bgc mb-4">
                                 <div class="card mb-4 box-shadow mt-4">
                                     <div class="showimg showtitle">
-                                        <img class="card-img-top"  style=" width: 100%; display: block;" src="bs_blog_s/images/8.jpg" data-holder-rendered="true">
+                                        <img class="card-img-top"  style=" width: 100%; display: block;" src="images/7.jpg" data-holder-rendered="true">
                                     </div>
                                     <div class="card-body">
                                         <a href="#">测试图文</a>
@@ -160,7 +140,7 @@
                             <div class="col-md-4 bgc mb-4">
                                 <div class="card  box-shadow mt-4">
                                     <div class="showimg">
-                                        <img class="card-img-top"  style=" width: 100%; display: block;" src="bs_blog_s/images/9.jpg" data-holder-rendered="true">
+                                        <img class="card-img-top"  style=" width: 100%; display: block;" src="images/9.jpg" data-holder-rendered="true">
                                     </div>
                                     <div class="card-body">
                                         <a href="#">测试图文</a>
@@ -188,28 +168,12 @@
         <!--右边-->
         <div class="col-md-4">
             <div class="container">
-                <div class="row bgc">
-                    <div class="new new-right">
-                        <span>最新文章</span>
-                        <small>New Article</small>
-                    </div>
-                    <div class="col-md-12 ">
-                        <div class="fxtp">
-                            <ul>
-                                <li><a href=""></a><span>微博</span></li>
-                                <li><a href=""></a></li>
-                                <li><a href=""></a></li>
-                                <li><a href=""></a></li>
-                            </ul>
-                        </div>
 
-                    </div>
-                </div>
 
                 <div class="row bgc mt-5 right-author">
                     <div class="col-md-12 ">
                         <div class="auth-img">
-                            <img src="bs_blog_s/images/logo.png"  alt="">
+                            <img src="images/logo.png"  alt="">
                         </div>
                         <div class="auth-name">
                             <span>惜缘</span>
@@ -267,14 +231,41 @@
                         <small>New Article</small>
                     </div>
                     <div class="col-md-12 ">
-                        <div class="fxtp">
-                            <ul>
-                                <li><a href=""></a><span>微博</span></li>
-                                <li><a href=""></a></li>
-                                <li><a href=""></a></li>
-                                <li><a href=""></a></li>
+                        <div class="tab-pane"  role="tabpanel" aria-labelledby="nav-profile-tab">
+                            <ul class="art-sort">
+                                <li>
+                                    <span>1</span>
+                                    <a href="#">thinkphp5随机抽取数据的方法
+                                        <b>(235)</b>
+                                    </a>
+                                </li>
+                                <li>
+                                    <span>2</span>
+                                    <a href="#">thinkphp5随机抽取数据的方法
+                                        <b>(235)</b>
+                                    </a>
+                                </li>
+                                <li>
+                                    <span>3</span>
+                                    <a href="#">thinkphp5随机抽取数据的方法
+                                        <b>(235)</b>
+                                    </a>
+                                </li>
+                                <li>
+                                    <span>4</span>
+                                    <a href="#">thinkphp5随机抽取数据的方法
+                                        <b>(235)</b>
+                                    </a>
+                                </li>
+                                <li>
+                                    <span>5</span>
+                                    <a href="#">thinkphp5随机抽取数据的方法
+                                        <b>(235)</b>
+                                    </a>
+                                </li>
                             </ul>
                         </div>
+
 
                     </div>
                 </div>
@@ -289,7 +280,7 @@
                     <ul class="list-unstyled artimg-list">
                         <li class="media">
                             <div class="artimg-img">
-                                <img class="mr-3" src="bs_blog_s/images/7.jpg"  alt="Generic placeholder image">
+                                <img class="mr-3" src="images/7.jpg"  alt="Generic placeholder image">
                             </div>
                             <div class="media-body art-content">
                                 <h5 class="mt-0 mb-1">js前端实现模糊查询</h5>
@@ -302,7 +293,7 @@
                         </li>
                         <li class="media">
                             <div class="artimg-img">
-                                <img class="mr-3" src="bs_blog_s/images/8.jpg"  alt="Generic placeholder image">
+                                <img class="mr-3" src="images/8.jpg"  alt="Generic placeholder image">
                             </div>
                             <div class="media-body art-content">
                                 <h5 class="mt-0 mb-1">js前端实现模糊查询</h5>
@@ -315,7 +306,7 @@
                         </li>
                         <li class="media">
                             <div class="artimg-img">
-                                <img class="mr-3" src="bs_blog_s/images/9.jpg"  alt="Generic placeholder image">
+                                <img class="mr-3" src="images/9.jpg"  alt="Generic placeholder image">
                             </div>
                             <div class="media-body art-content">
                                 <h5 class="mt-0 mb-1">js前端实现模糊查询</h5>
@@ -344,7 +335,7 @@
                             <ul class="hd-ul">
                                 <li>
                                     <div class="art-hd-list-left">
-                                        <a href="#"><img src="bs_blog_s/images/logo.png"  alt=""></a>
+                                        <a href="#"><img src="images/logo.png"  alt=""></a>
                                     </div>
                                     <div class="art-hd-list-right">
                                         <span><i class="el-user"></i>惜缘</span>
@@ -354,7 +345,7 @@
                                 </li>
                                 <li>
                                     <div class="art-hd-list-left">
-                                        <a href="#"><img src="bs_blog_s/images/logo.png"  alt=""></a>
+                                        <a href="#"><img src="images/logo.png"  alt=""></a>
                                     </div>
                                     <div class="art-hd-list-right">
                                         <span><i class="el-user"></i>惜缘</span>
@@ -364,7 +355,7 @@
                                 </li>
                                 <li>
                                     <div class="art-hd-list-left">
-                                        <a href="#"><img src="bs_blog_s/images/logo.png"  alt=""></a>
+                                        <a href="#"><img src="images/logo.png"  alt=""></a>
                                     </div>
                                     <div class="art-hd-list-right">
                                         <span><i class="el-user"></i>惜缘</span>
@@ -374,7 +365,7 @@
                                 </li>
                                 <li>
                                     <div class="art-hd-list-left">
-                                        <a href="#"><img src="bs_blog_s/images/logo.png"  alt=""></a>
+                                        <a href="#"><img src="images/logo.png"  alt=""></a>
                                     </div>
                                     <div class="art-hd-list-right">
                                         <span><i class="el-user"></i>惜缘</span>
@@ -384,7 +375,7 @@
                                 </li>
                                 <li>
                                     <div class="art-hd-list-left">
-                                        <a href="#"><img src="bs_blog_s/images/logo.png"  alt=""></a>
+                                        <a href="#"><img src="images/logo.png"  alt=""></a>
                                     </div>
                                     <div class="art-hd-list-right">
                                         <span><i class="el-user"></i>惜缘</span>
@@ -615,7 +606,7 @@
                 <ul class="list-unstyled footer-list">
                     <li class="media">
                         <div class="footer-img">
-                            <img class="mr-3" src="bs_blog_s/images/7.jpg"  alt="Generic placeholder image">
+                            <img class="mr-3" src="images/7.jpg"  alt="Generic placeholder image">
                         </div>
                         <div class="media-body art-content footer-content">
                             <h5 class="mt-0 mb-1">js前端实现模糊查询</h5>
@@ -628,7 +619,7 @@
                     </li>
                     <li class="media">
                         <div class="footer-img">
-                            <img class="mr-3" src="bs_blog_s/images/8.jpg"  alt="Generic placeholder image">
+                            <img class="mr-3" src="images/8.jpg"  alt="Generic placeholder image">
                         </div>
                         <div class="media-body art-content footer-content">
                             <h5 class="mt-0 mb-1">js前端实现模糊查询</h5>
@@ -641,7 +632,7 @@
                     </li>
                     <li class="media">
                         <div class="footer-img">
-                            <img class="mr-3" src="bs_blog_s/images/9.jpg"  alt="Generic placeholder image">
+                            <img class="mr-3" src="images/9.jpg"  alt="Generic placeholder image">
                         </div>
                         <div class="media-body art-content footer-content">
                             <h5 class="mt-0 mb-1">js前端实现模糊查询</h5>
@@ -654,7 +645,7 @@
                     </li>
                     <li class="media">
                         <div class="footer-img">
-                            <img class="mr-3" src="bs_blog_s/images/10.jpg"  alt="Generic placeholder image">
+                            <img class="mr-3" src="images/10.jpg"  alt="Generic placeholder image">
                         </div>
                         <div class="media-body art-content footer-content">
                             <h5 class="mt-0 mb-1">js前端实现模糊查询</h5>
@@ -689,10 +680,10 @@
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="bs_blog_s/lib/jquery/jquery.js"></script>
+<script src="lib/jquery/jquery.js"></script>
 
-<script src="bs_blog_s/lib/bootstrap/js/bootstrap.js"></script>
-<script src="bs_blog_s/js/wow.js"></script>
+<script src="lib/bootstrap/js/bootstrap.js"></script>
+<script src="js/wow.js"></script>
 <script>
     new WOW().init();//把wow初始化
 
