--- a/bs_blog_s/picture.html
+++ b/bs_blog_s/picture.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8">
     <title>相册</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="bs_blog_s/lib/bootstrap/css/bootstrap.css">
-    <link rel="stylesheet" href="bs_blog_s/css/main.css">
-    <link rel="stylesheet" href="bs_blog_s/css/animate.css">
-    <link rel="stylesheet" href="bs_blog_s/css/font-icon.css">
+    <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/animate.css">
+    <link rel="stylesheet" href="css/font-icon.css">
 </head>
 <body>
 <!--导航-->
 <nav class="navbar navbar-expand-lg navbar-light nav-color-nav  navbar-lk text-dark">
     <div class="container">
-        <a class="navbar-brand xiyuan" href="#"><img src="bs_blog_s/images/logo2.png" alt=""></a>
+        <a class="navbar-brand xiyuan" href="#"><img src="images/logo2.png" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nabmune" aria-controls="nabmune" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="nabmune">
             <ul class="navbar-nav nav-color ">
                 <li class="nav-item active ">
-                    <a class="nav-link" href="index.html">首页 <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="../index.html">首页 <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item ">
                     <a class="nav-link" href="chat.html">说说</a>
@@ -76,7 +76,7 @@
                     <div class="col-md-3 col-sm-6 ">
                         <div class="card box-shadow  mt-4">
                             <div class="showimg">
-                                <img class="card-img-top"  style=" width: 100%; display: block;" src="bs_blog_s/images/1.png" data-holder-rendered="true">
+                                <img class="card-img-top"  style=" width: 100%; display: block;" src="images/1.png" data-holder-rendered="true">
                             </div>
 
                             <div class="card-body">
@@ -93,7 +93,7 @@
                     <div class="col-md-3 col-sm-6">
                         <div class="card  box-shadow mt-4">
                             <div class="showimg showtitle">
-                                <img class="card-img-top"  style=" width: 100%; display: block;" src="bs_blog_s/images/2.png" data-holder-rendered="true">
+                                <img class="card-img-top"  style=" width: 100%; display: block;" src="images/2.png" data-holder-rendered="true">
                             </div>
                             <div class="card-body">
                                 <a href="#">测试图文</a>
@@ -109,7 +109,7 @@
                     <div class="col-md-3 col-sm-6">
                         <div class="card  box-shadow mt-4">
                             <div class="showimg">
-                                <img class="card-img-top"  style=" width: 100%; display: block;" src="bs_blog_s/images/3.png" data-holder-rendered="true">
+                                <img class="card-img-top"  style=" width: 100%; display: block;" src="images/3.png" data-holder-rendered="true">
                             </div>
                             <div class="card-body">
                                 <a href="#">测试图文</a>
@@ -125,7 +125,7 @@
                     <div class="col-md-3 col-sm-6 ">
                         <div class="card  box-shadow mt-4">
                             <div class="showimg">
-                                <img class="card-img-top"  style=" width: 100%; display: block;" src="bs_blog_s/images/1.png" data-holder-rendered="true">
+                                <img class="card-img-top"  style=" width: 100%; display: block;" src="images/1.png" data-holder-rendered="true">
                             </div>
                             <div class="card-body">
                                 <a href="#">测试图文</a>
@@ -145,7 +145,7 @@
                     <div class="col-md-3 col-sm-6  ">
                         <div class="card box-shadow  mt-4">
                             <div class="showimg">
-                                <img class="card-img-top"  style=" width: 100%; display: block;" src="bs_blog_s/images/4.jpg" data-holder-rendered="true">
+                                <img class="card-img-top"  style=" width: 100%; display: block;" src="images/4.jpg" data-holder-rendered="true">
                             </div>
 
                             <div class="card-body">
@@ -162,7 +162,7 @@
                     <div class="col-md-3 col-sm-6">
                         <div class="card  box-shadow mt-4">
                             <div class="showimg showtitle">
-                                <img class="card-img-top"  style=" width: 100%; display: block;" src="bs_blog_s/images/6.jpg" data-holder-rendered="true">
+                                <img class="card-img-top"  style=" width: 100%; display: block;" src="images/6.jpg" data-holder-rendered="true">
                             </div>
                             <div class="card-body">
                                 <a href="#">测试图文</a>
@@ -178,7 +178,7 @@
                     <div class="col-md-3 col-sm-6">
                         <div class="card  box-shadow mt-4">
                             <div class="showimg">
-                                <img class="card-img-top"  style=" width: 100%; display: block;" src="bs_blog_s/images/5.jpg" data-holder-rendered="true">
+                                <img class="card-img-top"  style=" width: 100%; display: block;" src="images/5.jpg" data-holder-rendered="true">
                             </div>
                             <div class="card-body">
                                 <a href="#">测试图文</a>
@@ -194,7 +194,7 @@
                     <div class="col-md-3 col-sm-6 ">
                         <div class="card  box-shadow mt-4">
                             <div class="showimg">
-                                <img class="card-img-top"  style=" width: 100%; display: block;" src="bs_blog_s/images/13.jpg" data-holder-rendered="true">
+                                <img class="card-img-top"  style=" width: 100%; display: block;" src="images/13.jpg" data-holder-rendered="true">
                             </div>
                             <div class="card-body">
                                 <a href="#">测试图文</a>
@@ -268,7 +268,7 @@
                 <ul class="list-unstyled footer-list">
                     <li class="media">
                         <div class="footer-img">
-                            <img class="mr-3" src="bs_blog_s/images/7.jpg"  alt="Generic placeholder image">
+                            <img class="mr-3" src="images/7.jpg"  alt="Generic placeholder image">
                         </div>
                         <div class="media-body art-content footer-content">
                             <h5 class="mt-0 mb-1">js前端实现模糊查询</h5>
@@ -281,7 +281,7 @@
                     </li>
                     <li class="media">
                         <div class="footer-img">
-                            <img class="mr-3" src="bs_blog_s/images/8.jpg"  alt="Generic placeholder image">
+                            <img class="mr-3" src="images/8.jpg"  alt="Generic placeholder image">
                         </div>
                         <div class="media-body art-content footer-content">
                             <h5 class="mt-0 mb-1">js前端实现模糊查询</h5>
@@ -294,7 +294,7 @@
                     </li>
                     <li class="media">
                         <div class="footer-img">
-                            <img class="mr-3" src="bs_blog_s/images/9.jpg"  alt="Generic placeholder image">
+                            <img class="mr-3" src="images/9.jpg"  alt="Generic placeholder image">
                         </div>
                         <div class="media-body art-content footer-content">
                             <h5 class="mt-0 mb-1">js前端实现模糊查询</h5>
@@ -307,7 +307,7 @@
                     </li>
                     <li class="media">
                         <div class="footer-img">
-                            <img class="mr-3" src="bs_blog_s/images/10.jpg"  alt="Generic placeholder image">
+                            <img class="mr-3" src="images/10.jpg"  alt="Generic placeholder image">
                         </div>
                         <div class="media-body art-content footer-content">
                             <h5 class="mt-0 mb-1">js前端实现模糊查询</h5>
@@ -342,10 +342,10 @@
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="bs_blog_s/lib/jquery/jquery.js"></script>
+<script src="lib/jquery/jquery.js"></script>
 
-<script src="bs_blog_s/lib/bootstrap/js/bootstrap.js"></script>
-<script src="bs_blog_s/js/wow.js"></script>
+<script src="lib/bootstrap/js/bootstrap.js"></script>
+<script src="js/wow.js"></script>
 <script>
     new WOW().init();//把wow初始化
 
