--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <a class="nav-link" href="index.html">首页 <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item ">
-                    <a class="nav-link" href="chat.html">说说</a>
+                    <a class="nav-link" href="bs_blog_s/chat.html">说说</a>
                 </li>
 
                 <li class="nav-item dropdown ">
@@ -34,23 +34,23 @@
                         分类
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="category.html">php</a>
-                        <a class="dropdown-item" href="category.html">js</a>
+                        <a class="dropdown-item" href="bs_blog_s/category.html">php</a>
+                        <a class="dropdown-item" href="bs_blog_s/category.html">js</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="category.html">jq</a>
+                        <a class="dropdown-item" href="bs_blog_s/category.html">jq</a>
                     </div>
                 </li>
                 <li class="nav-item ">
-                    <a class="nav-link" href="picture.html">相册</a>
+                    <a class="nav-link" href="bs_blog_s/picture.html">相册</a>
                 </li>
                 <li class="nav-item ">
-                    <a class="nav-link" href="life.html">生活</a>
+                    <a class="nav-link" href="bs_blog_s/life.html">生活</a>
                 </li>
                 <li class="nav-item ">
-                    <a class="nav-link" href="chat.html">心得</a>
+                    <a class="nav-link" href="bs_blog_s/chat.html">心得</a>
                 </li>
                 <li class="nav-item ">
-                    <a class="nav-link" href="about.html">关于</a>
+                    <a class="nav-link" href="bs_blog_s/about.html">关于</a>
                 </li>
 
 
