--- a/b_top250.html
+++ b/b_top250.html
@@ -75,7 +75,7 @@
 
 	<!-- 底部 -->
 	<div class="layui-footer footer footer-docs">
-	  <p>Copyright © 2025 <a href="http://www.hkan.cn">好看CN</a> MIT Licensed</p>
+	  <p>Copyright © 2025 <a href="http://www.kanyy.cn">看丫丫</a> MIT Licensed</p>
 	  <p id="LAY-footer-info">
 	    <a href="https://xie1776.github.io/zhibin/m_top250.html" target="_blank">电影TOP<sup>250</sup></a> 
 	    <a href="https://xie1776.github.io/zhibin/b_top250.html" target="_blank">读书TOP<sup>250</sup></a>
