--- a/resume.html
+++ b/resume.html
@@ -152,7 +152,7 @@
  
     <footer class="footer">
         <div class="text-center">
-               <small class="copyright">Designed with <i class="fas fa-heart"></i> by ttkan.cn <a href="https://www.ttkan.cn/" target="_blank" title="天天看">天天看</a></small>
+               <small class="copyright">Designed with <i class="fas fa-heart"></i> by kanyy.cn <a href="https://www.kanyy.cn/" target="_blank" title="看丫丫">看丫丫</a></small>
         </div><!--//container-->
     </footer><!--//footer--> 
 </body>
